Changed Guidos Name :-)

--- a/language/en-GB/en-GB.plg_system_dbfavicon.sys.ini
+++ b/language/en-GB/en-GB.plg_system_dbfavicon.sys.ini
@@ -1,5 +1,5 @@
 ;LANGUAGE FILE FOR DBFAVICONS
 
 PLG_SYSTEM_DBFAVICON="DB Favicons"
-PLG_SYSTEM_DBFAVICON_DESC="This plugin adds different favicons for specific devices <br> and was created at #jhuette as my first plugin project. <br> Special thanks to my mentors Yves Hoppe, Guido de Gobbis and Markus Linne"
+PLG_SYSTEM_DBFAVICON_DESC="This plugin adds different favicons for specific devices <br> and was created at #jhuette as my first plugin project. <br> Special thanks to my mentors Yves Hoppe, Guido De Gobbis and Markus Linne"
 
