--- a/language/en-GB/en-GB.plg_system_dbfavicon.ini
+++ b/language/en-GB/en-GB.plg_system_dbfavicon.ini
@@ -16,7 +16,7 @@ PLG_SYSTEM_DBFAVICON_FIELD_MAINIMAGE="Main Image"
 PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_BASIC="Enable"
 PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_BASIC_DESC="Enable favicon basic"
 PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_IOS="Enable"
-PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_IOS_DESC="Enable favicon for iOs"
+PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_IOS_DESC="Enable favicon for iOS"
 PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_ANDROID="Enable"
 PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_ANDROID_DESC="Enable favicon for Android"
 PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_SAFARI="Enable"
@@ -26,36 +26,36 @@ PLG_SYSTEM_DBFAVICON_FIELD_ENABLE_WINDOWS_DESC="Enable favicon for Windows"
 
 ;ALTENATIVE IMAGES
 PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_IOS="alternate image"
-PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_IOS_DESC="alternate image for iOs"
+PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_IOS_DESC="alternate image for iOS"
 PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_ANDROID="alternate image"
 PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_ANDROID_DESC="alternate image for Android"
 PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_SAFARI="alternate image"
 PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_SAFARI_DESC="alternate image for Safari"
 PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_WINDOWS="alternate image"
 PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_WINDOWS_DESC="alternate image for Windows"
-PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_MAINIMAGE="Mainimage"
-PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_MAINIMAGE_DESC="Set the Mainimage"
+PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_MAINIMAGE="Main image"
+PLG_SYSTEM_DBFAVICON_FIELD_IMAGE_MAINIMAGE_DESC="Set the Main image"
 
 ;COLORS
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_IOS="Backgroundcolor"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_IOS_DESC="Backgroundcolor for iOs"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_ANDROID="Theme color"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_ANDROID_DESC="Customize color of task bar"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_SAFARI="Backgroundcolor"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_SAFARI_DESC="Backgroundcolor for Safari"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_WINDOWS="Tile color"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_WINDOWS_DESC="Backgroundcolor for Windows Tiles"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_MAINIMAGE="Backgroundcolor"
-PLG_SYSTEM_DBFAVICON_FIELD_COLOR_MAINIMAGE_DESC="Set the Mainimage"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_IOS="Background colour"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_IOS_DESC="Background colour for iOS"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_ANDROID="Theme colour"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_ANDROID_DESC="Customize colour of task bar"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_SAFARI="Background colour"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_SAFARI_DESC="Background colour for Safari"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_WINDOWS="Tile colour"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_WINDOWS_DESC="Background colour for Windows Tiles"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_MAINIMAGE="Background colour"
+PLG_SYSTEM_DBFAVICON_FIELD_COLOR_MAINIMAGE_DESC="Set the Main image"
 
 ;ANDROID
-PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_APPNAME="Appname"
+PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_APPNAME="App name"
 PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_APPNAME_DESC="App name for display below the icon"
-PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_LINK_SELECT="Linkbehaviour"
+PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_LINK_SELECT="Link behaviour"
 PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_LINK_SELECT_STANDALONE="Standalone"
-PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_LINK_SELECT_DESC="Set the behavior of the /"Add to Homescreen/" link <br><strong>Browser:</strong> Opened like regular website <br><strong>Standalone:</strong> removes the navigation bar and adds own tab to task switcher "
+PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_LINK_SELECT_DESC="Set the behaviour of the /"Add to Homescreen/" link <br><strong>Browser:</strong> Opened like regular website <br><strong>Standalone:</strong> removes the navigation bar and adds own tab to task switcher"
 PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_ORIENTATION="Orientation"
-PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_ORIENTATION_DESC="Orientation of the Screen: <br><strong>Landscape:</strong> Force Landscape 0rientation <br><strong>Portrait:</strong> Force Portrait Orientation"
+PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_ORIENTATION_DESC="Orientation of the Screen: <br><strong>Landscape:</strong> Force Landscape Orientation <br><strong>Portrait:</strong> Force Portrait Orientation"
 PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_LINK_SELECT_BROWSER="browser"
 PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_LINK_SELECT_STANDALONE="standalone"
 PLG_SYSTEM_DBFAVICON_ANDROID_OPTIONS_ORIENTATION_AUTO="automatic"
